code changed in part b

--- a/movie.ipynb
+++ b/movie.ipynb
@@ -4780,8 +4780,8 @@
     }
    ],
    "source": [
-    "for i, n in enumerate(rec_movies.columns):\n",
-    "    print(i, n)"
+    "#for i, n in enumerate(rec_movies.columns):\n",
+    "    #print(i, n)"
    ]
   },
   {
